--- a/BaseProject/Resources/Storyboards/Base.lproj/Main.storyboard
+++ b/BaseProject/Resources/Storyboards/Base.lproj/Main.storyboard
@@ -84,67 +84,128 @@
             </objects>
             <point key="canvasLocation" x="1428" y="29"/>
         </scene>
-        <!--Item 2-->
+        <!--Wishlist-->
         <scene sceneID="Jjm-sO-SBQ">
             <objects>
                 <viewController id="aXp-72-UxZ" customClass="WishListViewController" customModule="BaseProject" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="OKt-zw-LKg">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bsV-HI-DK6">
+                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <constraints>
+                            <constraint firstItem="8fA-3R-FdE" firstAttribute="trailing" secondItem="bsV-HI-DK6" secondAttribute="trailing" id="5G0-kN-u9j"/>
+                            <constraint firstItem="bsV-HI-DK6" firstAttribute="top" secondItem="8fA-3R-FdE" secondAttribute="top" id="6ni-FW-C3c"/>
+                            <constraint firstItem="bsV-HI-DK6" firstAttribute="leading" secondItem="8fA-3R-FdE" secondAttribute="leading" id="Ucs-yy-iQs"/>
+                            <constraint firstItem="8fA-3R-FdE" firstAttribute="bottom" secondItem="bsV-HI-DK6" secondAttribute="bottom" id="k2t-Eq-JdY"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="8fA-3R-FdE"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="nVe-gE-QuE"/>
+                    <tabBarItem key="tabBarItem" title="Wishlist" image="wishlist_off" id="nVe-gE-QuE"/>
+                    <connections>
+                        <outlet property="background" destination="bsV-HI-DK6" id="LJy-nD-5Wo"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sC7-Yu-yEX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3257" y="274"/>
+            <point key="canvasLocation" x="4202" y="220"/>
         </scene>
-        <!--Item-->
+        <!--Chat-->
         <scene sceneID="BRe-Kx-TP4">
             <objects>
-                <viewController id="esE-zy-GQe" customClass="ChatViewController" customModule="BaseProject" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="D9m-ys-FrN">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <viewController storyboardIdentifier="ChatViewController" id="esE-zy-GQe" customClass="ChatViewController" customModule="BaseProject" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" clipsSubviews="YES" contentMode="scaleToFill" id="D9m-ys-FrN">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IAX-3Y-wEx">
+                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="btJ-UM-FDy">
+                                <rect key="frame" x="0.0" y="28" width="375" height="590"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="delegate" destination="esE-zy-GQe" id="7g8-Gs-YBb"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="AEj-us-cet" firstAttribute="trailing" secondItem="btJ-UM-FDy" secondAttribute="trailing" id="1L5-9E-QBf"/>
+                            <constraint firstItem="btJ-UM-FDy" firstAttribute="top" secondItem="AEj-us-cet" secondAttribute="top" constant="8" id="Gcu-a0-TSE"/>
+                            <constraint firstItem="btJ-UM-FDy" firstAttribute="leading" secondItem="AEj-us-cet" secondAttribute="leading" id="UQT-wH-eao"/>
+                            <constraint firstItem="AEj-us-cet" firstAttribute="bottom" secondItem="IAX-3Y-wEx" secondAttribute="bottom" id="VIC-2V-wRS"/>
+                            <constraint firstItem="IAX-3Y-wEx" firstAttribute="top" secondItem="AEj-us-cet" secondAttribute="top" id="WCe-Xo-pAC"/>
+                            <constraint firstItem="AEj-us-cet" firstAttribute="trailing" secondItem="IAX-3Y-wEx" secondAttribute="trailing" id="b0W-Sa-GMG"/>
+                            <constraint firstItem="AEj-us-cet" firstAttribute="bottom" secondItem="btJ-UM-FDy" secondAttribute="bottom" id="fkZ-kx-qpt"/>
+                            <constraint firstItem="IAX-3Y-wEx" firstAttribute="leading" secondItem="AEj-us-cet" secondAttribute="leading" id="j0O-8F-0eH"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="AEj-us-cet"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="UF0-pE-glk"/>
+                    <tabBarItem key="tabBarItem" title="Chat" image="chat_on" id="UF0-pE-glk"/>
+                    <navigationItem key="navigationItem" title="Chat" id="SrR-Hs-qbS"/>
+                    <connections>
+                        <outlet property="background" destination="IAX-3Y-wEx" id="rOo-um-00g"/>
+                        <outlet property="tableView" destination="btJ-UM-FDy" id="fP0-lm-UEd"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MFF-ac-cAP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3270" y="972"/>
+            <point key="canvasLocation" x="4201" y="937"/>
         </scene>
-        <!--Item 1-->
+        <!--Biblioteka-->
         <scene sceneID="FHr-nQ-j6S">
             <objects>
                 <viewController id="X8a-7i-DkW" customClass="LibraryViewController" customModule="BaseProject" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Yfc-69-6T1">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cVQ-dl-aww">
+                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Fkt-U9-qUu" firstAttribute="trailing" secondItem="cVQ-dl-aww" secondAttribute="trailing" id="T8t-od-xo8"/>
+                            <constraint firstItem="cVQ-dl-aww" firstAttribute="top" secondItem="Fkt-U9-qUu" secondAttribute="top" id="YN9-f1-XYP"/>
+                            <constraint firstItem="Fkt-U9-qUu" firstAttribute="bottom" secondItem="cVQ-dl-aww" secondAttribute="bottom" id="c06-S9-XXx"/>
+                            <constraint firstItem="cVQ-dl-aww" firstAttribute="leading" secondItem="Fkt-U9-qUu" secondAttribute="leading" id="hVC-iu-Ucz"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Fkt-U9-qUu"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 1" id="A2c-6c-MtI"/>
+                    <tabBarItem key="tabBarItem" title="Biblioteka" image="library_off" id="A2c-6c-MtI"/>
+                    <connections>
+                        <outlet property="background" destination="cVQ-dl-aww" id="wWm-tO-OwL"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vVV-3a-Rex" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3257" y="-392"/>
+            <point key="canvasLocation" x="4078" y="-429"/>
         </scene>
-        <!--Tab Bar View Controller-->
+        <!--Lolol-->
         <scene sceneID="ppp-G3-9ln">
             <objects>
                 <tabBarController storyboardIdentifier="TabBarViewController" id="1jM-GE-tVz" customClass="TabBarViewController" customModule="BaseProject" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="MnR-Dd-GoE">
+                    <navigationItem key="navigationItem" title="Lolol" id="IZP-bl-A9y"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics" translucent="NO"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="MnR-Dd-GoE">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="X8a-7i-DkW" kind="relationship" relationship="viewControllers" id="dNE-6R-e2E"/>
-                        <segue destination="aXp-72-UxZ" kind="relationship" relationship="viewControllers" id="Fdn-t7-Ok7"/>
-                        <segue destination="esE-zy-GQe" kind="relationship" relationship="viewControllers" id="6C8-qV-2BR"/>
+                        <segue destination="X8a-7i-DkW" kind="relationship" relationship="viewControllers" id="PUV-qu-4yf"/>
+                        <segue destination="aXp-72-UxZ" kind="relationship" relationship="viewControllers" id="N0H-u2-Xn7"/>
+                        <segue destination="esE-zy-GQe" kind="relationship" relationship="viewControllers" id="Tkz-vt-FlP"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rts-tD-VYe" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -152,4 +213,9 @@
             <point key="canvasLocation" x="2303" y="-59"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="chat_on" width="24" height="24"/>
+        <image name="library_off" width="30" height="17"/>
+        <image name="wishlist_off" width="24" height="22"/>
+    </resources>
 </document>
