--- a/BaseProject/Views/FriendTableViewCell.xib
+++ b/BaseProject/Views/FriendTableViewCell.xib
@@ -19,7 +19,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="121" id="KGk-i7-Jjw" customClass="FriendTableViewCell" customModule="BaseProject" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FriendTableViewCell" rowHeight="121" id="KGk-i7-Jjw" customClass="FriendTableViewCell" customModule="BaseProject" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="372" height="121"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -37,7 +37,7 @@
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="left" distribution="fillProportionally" alignment="center" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="6tP-w9-oT9">
-                                <rect key="frame" x="299" y="25.5" width="30" height="17"/>
+                                <rect key="frame" x="315" y="25.5" width="14" height="17"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fkj-mp-l2k">
                                         <rect key="frame" x="0.0" y="4.5" width="8" height="8"/>
@@ -47,15 +47,12 @@
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sg6-ud-JN2">
-                                        <rect key="frame" x="12" y="0.0" width="18" height="17"/>
+                                        <rect key="frame" x="12" y="0.0" width="2" height="17"/>
                                         <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="30" id="jwC-em-QWs"/>
-                                </constraints>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yvf-F8-jBb">
                                 <rect key="frame" x="70" y="23" width="43.5" height="22"/>
@@ -67,7 +64,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="ODo-tK-ceb" secondAttribute="bottom" constant="9" id="1I5-Mw-TQX"/>
-                            <constraint firstAttribute="trailing" secondItem="6tP-w9-oT9" secondAttribute="trailing" constant="11" id="9gB-lA-bYB"/>
+                            <constraint firstAttribute="trailing" secondItem="6tP-w9-oT9" secondAttribute="trailing" constant="11" id="LVM-jj-Z3G"/>
                             <constraint firstItem="ODo-tK-ceb" firstAttribute="leading" secondItem="k36-R9-VlH" secondAttribute="leading" constant="9" id="Rp5-16-5zX"/>
                             <constraint firstItem="6tP-w9-oT9" firstAttribute="centerY" secondItem="ODo-tK-ceb" secondAttribute="centerY" id="eYC-cy-exC"/>
                             <constraint firstItem="Yvf-F8-jBb" firstAttribute="leading" secondItem="ODo-tK-ceb" secondAttribute="trailing" constant="11" id="hZF-R4-Qk7"/>
